--- a/config/crd/bases/api.secrets.mgr_secretmanagers.yaml
+++ b/config/crd/bases/api.secrets.mgr_secretmanagers.yaml
@@ -53,6 +53,14 @@ spec:
             type: object
           status:
             description: SecretManagerStatus defines the observed state of SecretManager
+            properties:
+              namespaces:
+                description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
+                  of cluster Important: Run "make" to regenerate code after modifying
+                  this file'
+                items:
+                  type: string
+                type: array
             type: object
         type: object
     served: true
