Update SecretManagerSpec struct in secretmanager_types.go and SecretManagerSpec properties in api.secrets.mgr_secretmanagers.yaml

--- a/config/crd/bases/api.secrets.mgr_secretmanagers.yaml
+++ b/config/crd/bases/api.secrets.mgr_secretmanagers.yaml
@@ -36,13 +36,18 @@ spec:
             description: SecretManagerSpec defines the desired state of SecretManager
             properties:
               avoidNamespace:
-                type: string
+                items:
+                  type: string
+                type: array
               data:
                 additionalProperties:
+                  format: byte
                   type: string
                 type: object
               matchNamespace:
-                type: string
+                items:
+                  type: string
+                type: array
               type:
                 type: string
             required:
