added sample custom resource

--- a/config/samples/api_v1alpha1_secretmanager.yaml
+++ b/config/samples/api_v1alpha1_secretmanager.yaml
@@ -9,4 +9,11 @@ metadata:
     app.kubernetes.io/created-by: secret-manager-opr
   name: secretmanager-sample
 spec:
-  # TODO(user): Add fields here
+  type: "kubernetes.io/basic-auth"
+  data:
+    username: YWRtaW4K
+    password: YWRtaW4K
+  matchNamespace:
+  - test*
+  avoidNamespace:
+  - test1
