Update SecretManager schema and add short name 'smr'

--- a/config/crd/bases/api.secrets.mgr_secretmanagers.yaml
+++ b/config/crd/bases/api.secrets.mgr_secretmanagers.yaml
@@ -12,13 +12,15 @@ spec:
     kind: SecretManager
     listKind: SecretManagerList
     plural: secretmanagers
+    shortNames:
+    - smr
     singular: secretmanager
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: SecretManager is the Schema for the secretmanagers API
+        description: SecretManager is the Schema for the secretmanagers
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
