Update SecretManagerSpec struct and CRD schema

--- a/config/crd/bases/api.secrets.mgr_secretmanagers.yaml
+++ b/config/crd/bases/api.secrets.mgr_secretmanagers.yaml
@@ -37,7 +37,7 @@ spec:
           spec:
             description: SecretManagerSpec defines the desired state of SecretManager
             properties:
-              avoidNamespace:
+              avoidNamespaces:
                 items:
                   type: string
                 type: array
@@ -46,16 +46,16 @@ spec:
                   format: byte
                   type: string
                 type: object
-              matchNamespace:
+              matchNamespaces:
                 items:
                   type: string
                 type: array
               type:
                 type: string
             required:
-            - avoidNamespace
+            - avoidNamespaces
             - data
-            - matchNamespace
+            - matchNamespaces
             - type
             type: object
           status:
